# thy-squeal

./: AGENTS.md  Cargo.toml  LICENSE  README.md
docs/: COMPARISON.md  (+5 more)
server/: Cargo.toml
server/src/: http.rs  main.rs  mysql.rs  sql.pest  tests.rs
server/src/mysql/: connection.rs  mod.rs  packet.rs
server/src/redis/: connection.rs  tests.rs
server/src/sql/: ast.rs  error.rs  eval.rs  mod.rs  parser.rs  sql.pest
server/src/sql/ast/: condition.rs  expression.rs  mod.rs  statements.rs
server/src/sql/eval/: column.rs  condition.rs  expression.rs  mod.rs
server/src/sql/eval/expression/: binary.rs  function.rs  subquery.rs
server/src/sql/executor/: ddl.rs  dispatch.rs  dml.rs  dump.rs  explain.rs  mod.rs  result.rs  search.rs  select.rs  tests.rs  tx.rs  user.rs
server/src/sql/executor/aggregate/: functions.rs  grouping.rs  mod.rs
server/src/sql/executor/dml/: delete.rs  insert.rs  update.rs
server/src/sql/executor/select/: inner.rs
server/src/sql/parser/: ddl.rs  dml.rs  expr.rs  mod.rs  select.rs  utils.rs
server/src/sql/squeal/: cond.rs  conversions.rs  expr.rs  mod.rs  stmt.rs
server/src/squeal/: conversions.rs  mod.rs  stmt.rs
server/src/storage/: database.rs  error.rs  index.rs  info_schema.rs  mod.rs  mutation.rs  persistence.rs  row.rs  search.rs  table.rs  types.rs  value.rs  wal.rs
server/src/storage/table/: index.rs  mod.rs  mutation.rs  search.rs
server/src/storage/value/: cast.rs  mod.rs  ops.rs
server/src/tests/: common.rs  dump_restore.rs  info_schema.rs  lifecycle.rs  mod.rs  persistence.rs  search.rs  transactions.rs
(+44 files in other folders)
