[package]
name = "thy-squeal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "thy-squeal"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
pest.workspace = true
pest_derive.workspace = true

axum = "0.7"
dashmap = "5"
moka = { version = "0.12", features = ["sync", "future"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
async-trait = "0.1"
base64 = "0.22"

[features]
default = []
